--- a/install_and_config/2-docker-compose-configure/docker-compose.yml
+++ b/install_and_config/2-docker-compose-configure/docker-compose.yml
@@ -14,9 +14,10 @@ services:
 
   # This configuration allows you to start elasticsearch
   elasticsearch:
-    image: itzg/elasticsearch:2.4.3
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
     environment:
       PLUGINS: appbaseio/dejavu
       OPTS: -Dindex.number_of_shards=1 -Dindex.number_of_replicas=0
+      discovery.type : single-node
     ports:
       - "9200:9200"
